[metadata]
name = linkstation
version = 0.0.1
author = Teesit Eadthongsai
author_email = teesite-pypi@outlook.com
description = A python client for Buffalo LinkStation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iKaew/linkstation
project_urls =
    Bug Tracker = https://github.com/iKaew/linkstation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = linkstation
packages = find:
python_requires = >=3.6

[options.packages.find]
where = linkstation